465 - QFixedArray 001 Done. In QFixedArray.h: Done [TODO] Replace "m_uLast + 1" with "fixedArray.GetCount()". In QFixedArray.h: Done [TODO] Access to every element with operator[] In QFixedArray_test.cpp: Done [TODO] Access to every element with  operator[] Added ArrayElementMock.h to the CodeBlocks workspace, missing in task 464.

--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -129,6 +129,9 @@
 			<Add directory="../../../../../3rdparty/Boost/include" />
 			<Add directory="../../../../tests/unit" />
 		</Compiler>
+		<Unit filename="../../../../tests/unit/testmodule_tools/ArrayElementMock.h">
+			<Option virtualFolder="Tests/Containers/" />
+		</Unit>
 		<Unit filename="../../../../tests/unit/testmodule_tools/QBaseDualQuaternion_Test.cpp">
 			<Option virtualFolder="Tests/Math/" />
 		</Unit>
