--- a/trunk/testing/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj
+++ b/trunk/testing/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj
@@ -37,7 +37,7 @@
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QDateTime_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QDstInformation_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QDualQuaternion_Test.cpp" />
-    <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QFixedArray_test.cpp" />
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QFixedArray_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QHexahedron_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QLineSegment2D_Test.cpp" />
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QLineSegment3D_Test.cpp" />
