--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Common/Common.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Common/Common.cbp
@@ -6,7 +6,7 @@
 		<Option execution_dir="/home/mar/Proyectos/C++/QuimeraEngine/projects/CodeBlocks10/QuimeraEngine/" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="DataTypes\;Memory\;" />
+		<Option virtualFolders="DataTypes/;Memory/;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -82,6 +82,45 @@
 					<Add library="icuuc" />
 					<Add library="icuin" />
 					<Add directory="../../../../3rdparty/Boost/bin/Linux32/DebugSharedrtDynamic" />
+				</Linker>
+			</Target>
+			<Target title="DebugMac32SharedrtStatic">
+				<Option platforms="Mac;" />
+				<Option output="../../../../bin/CodeBlocks10/DebugMac32SharedrtStatic/libQuimeraEngineCommon.a" prefix_auto="0" extension_auto="0" />
+				<Option working_dir="" />
+				<Option object_output="../../../../garbage/CodeBlocks10/DebugMac32SharedrtStatic" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-m32" />
+					<Add option="-D_DEBUG" />
+				</Compiler>
+				<Linker>
+					<Add option="-m32" />
+					<Add directory="../../../../3rdparty/Boost/bin/Mac32/DebugSharedrtStatic" />
+				</Linker>
+			</Target>
+			<Target title="DebugMac32SharedrtDynamic">
+				<Option platforms="Mac;" />
+				<Option output="../../../../bin/CodeBlocks10/DebugMac32SharedrtDynamic/libQuimeraEngineCommon.so" prefix_auto="0" extension_auto="0" />
+				<Option working_dir="../../../../bin/CodeBlocks10/DebugMac32SharedrtDynamic" />
+				<Option object_output="../../../../garbage/CodeBlocks10/DebugMac32SharedrtDynamic" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-m32" />
+					<Add option="-D_DEBUG" />
+					<Add option="-DQE_PREPROCESSOR_EXPORTLIB_COMMON" />
+				</Compiler>
+				<Linker>
+					<Add option="-m32" />
+					<Add library="icudata" />
+					<Add library="icuuc" />
+					<Add directory="../../../../3rdparty/Boost/bin/Mac32/DebugSharedrtDynamic" />
 				</Linker>
 			</Target>
 		</Build>
