--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
@@ -5,7 +5,7 @@
 		<Option title="Tools" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Math\;Containers\;Time\;" />
+		<Option virtualFolders="Math/;Containers/;Time/;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -52,7 +52,7 @@
 					<Add option="-DQE_PREPROCESSOR_IMPORTLIB_COMMON" />
 				</Compiler>
 				<Linker>
-					<Add library="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtDynamic\QuimeraEngineCommon.dll" />
+					<Add library="../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic/QuimeraEngineCommon.dll" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic" />
 				</Linker>
 			</Target>
@@ -74,6 +74,47 @@
 				<Linker>
 					<Add option="-m32" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugLinux32SharedrtDynamic" />
+				</Linker>
+			</Target>
+			<Target title="DebugMac32SharedrtStatic">
+				<Option platforms="Mac;" />
+				<Option output="../../../../bin/CodeBlocks10/DebugMac32SharedrtStatic/libQuimeraEngineTools.a" prefix_auto="0" extension_auto="0" />
+				<Option working_dir="" />
+				<Option object_output="../../../../garbage/CodeBlocks10/DebugMac32SharedrtStatic" />
+				<Option type="2" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-m32" />
+					<Add option="-D_DEBUG" />
+					<Add directory="../../../../3rdparty/Boost/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-m32" />
+				</Linker>
+			</Target>
+			<Target title="DebugMac32SharedrtDynamic">
+				<Option platforms="Mac;" />
+				<Option output="../../../../bin/CodeBlocks10/DebugMac32SharedrtDynamic/libQuimeraEngineTools.so" prefix_auto="0" extension_auto="0" />
+				<Option working_dir="../../../../bin/CodeBlocks10/DebugMac32SharedrtDynamic" />
+				<Option object_output="../../../../garbage/CodeBlocks10/DebugMac32SharedrtDynamic" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Compiler>
+					<Add option="-g" />
+					<Add option="-m32" />
+					<Add option="-D_DEBUG" />
+					<Add option="-DQE_PREPROCESSOR_EXPORTLIB_TOOLS" />
+					<Add option="-DQE_PREPROCESSOR_IMPORTLIB_COMMON" />
+				</Compiler>
+				<Linker>
+					<Add option="-m32" />
+					<Add option="-v" />
+					<Add library="../../../../bin/CodeBlocks10/DebugMac32SharedrtDynamic/libQuimeraEngineCommon.so" />
+					<Add directory="../../../../bin/CodeBlocks10/DebugMac32SharedrtDynamic" />
+					<Add directory="../../../../3rdparty/Boost/bin/Mac32/DebugSharedrtStatic" />
 				</Linker>
 			</Target>
 		</Build>
@@ -163,9 +204,6 @@
 		</Unit>
 		<Unit filename="../../../../headers/QDualQuaternion.h">
 			<Option virtualFolder="Math/" />
-		</Unit>
-		<Unit filename="../../../../headers/QFixedArray.h">
-			<Option virtualFolder="Containers/" />
 		</Unit>
 		<Unit filename="../../../../headers/QFixedArray.h">
 			<Option virtualFolder="Containers/" />
