--- a/trunk/testing/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj.filters
+++ b/trunk/testing/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj.filters
@@ -195,6 +195,9 @@
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QDateTime_Test.cpp">
       <Filter>Tests\Time</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QFixedArray_test.cpp">
+      <Filter>Tests\Containers</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\SQTimeZoneFactory_Test.cpp">
       <Filter>Tests\Time</Filter>
     </ClCompile>
@@ -204,7 +207,7 @@
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QDstInformation_Test.cpp">
       <Filter>Tests\Time</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QFixedArray_Test.cpp">
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QArrayIterator_Test.cpp">
       <Filter>Tests\Containers</Filter>
     </ClCompile>
   </ItemGroup>
